# libotfccxx

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run-clang.sh  run-gcc.sh  run.sh
include/: otfcc.hpp
include/otfcc/: internal.hpp
include/otfcc/detail/: sfnt.hpp  type.hpp  util.hpp
